class-management-auth-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: class-management-auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: class-management-auth-service
  template:
    metadata:
      labels:
        app: class-management-auth-service
    spec:
      # initContainers:
      #   - name: wait-for-mysql
      #     image: busybox
      #     command: ['sh', '-c', 'until nc -z -v -w30 auth-service-mysql 3306; do echo "Waiting for MySQL"; sleep 5; done']
      containers:
        - name: class-management-auth-service-container
          image: th1enlm02/class-management-auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3077
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mysql-deployment
  labels:
    app: auth-service-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: auth-service-mysql
    spec:
      containers:
        - name: auth-service-mysql-container
          image: mysql:8.3.0
          # resources:
          #   requests:
          #     cpu: 5m
          #     memory: 50Mi
          #   limits:
          #     cpu: 100m
          #     memory: 1Gi
          ports:
            - containerPort: 3306
          livenessProbe:
            exec:
              command:
              - mysqladmin
              - ping
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - mysqladmin
              - ping
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: auth-service-mysql-data
              mountPath: /var/lib/mysql
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "sleep 10 && mysql -h localhost -u root -p$MYSQL_ROOT_PASSWORD < /docker-entrypoint-initdb.d/init.sql"]
      volumes:
        - name: auth-service-mysql-data
          persistentVolumeClaim:
            claimName: auth-mysql-pvc
        - name: initdb
          configMap:
            name: auth-mysql-initdb
