class-management-auth-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: class-management-auth-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3077
      targetPort: 3077

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-mysql
spec:
  selector:
    app: auth-service-mysql
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
