class-management-auth-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
spec:
  rules:
  - host: auth-api.th1enlm02.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 3077
